--- a/doulapaket.html
+++ b/doulapaket.html
@@ -24,50 +24,44 @@
         <div class="package flex">
           <div class="package-info">
             <h1>Så här går det till</h1>
+            <h4>Samtal inför förlossning</h4>
+            <p>Samtalet med mig bör inte ersätta samtal med leg. 
+              Psykolog eller terapeut om behov finns av den sortens samtal. 
+              Doulasamtalet kan ses om ett komplement till ev. terapi.  
+            </p>
+            <br>
             <div>
-              <h4>Samtal inför förlossning</h4>
-              <p>Samtalet med mig bör inte ersätta samtal med leg. 
-                Psykolog eller terapeut om behov finns av den sortens samtal. 
-                Doulasamtalet kan ses om ett komplement till ev. terapi.  
-              </p>
-              <br>
+              <p>Förlossningsförberedande</p>
               <p>
-                Vi utgår från dig/er och dina/era behov. Samtalet kan handla om 
-                förlossningsföreberedelse, tidigare erfarenheter, förlossningsrädsla 
-                eller frågor. Samtalet går att ha på plats eller digitalt.
+                - Samtal utifrån dina/era behov och eventuella frågor 
+                inför förlossningen
               </p>
-              <br>
               <p>
-                Vi går igenom avslappningsövningar, akupressurövningar och övningar med sjal praktiskt vid behov.
+                - Stöd att finna insikt om vad du/ni önskar utav förlossningen och
+                hur förutsättningar kan skapas för att uppnå detta.
               </p>
-              <br>
-              <div>
-                <p>Förlossningsförberedande</p>
-                <p>
-                  - Samtal utifrån dina/era behov och eventuella frågor 
-                  inför förlossningen
-                </p>
-                <p>
-                  - Stöd att finna insikt om vad du/ni önskar utav förlossningen och
-                  hur förutsättningar kan skapas för att uppnå detta.
-                </p>
-                <p>
-                  - Samtal kring vikten av partners roll och hur ni kan förbereda er som team.
-                </p>
-                <p>
-                  - Samtal kring Oxytocin och dessverkan under förlossningen.
-                </p>
-              </div>
-              <div>
-                <br>
-                <h4>Förlossningsrädsla</h4>
-                <p>
-                  - Samtal kring eventuell förlossningsrädsla och känslor kring detta samt hur du/ni kan arbeta för att känna trygghet och lugn.
-                </p>
-              </div>
+              <p>
+                - Samtal kring vikten av partners roll och hur ni kan förbereda er som team.
+              </p>
+              <p>
+                - Samtal kring Oxytocin och dessverkan under förlossningen.
+              </p>
             </div>
             <div>
-              <p>Postpartum</p>
+              <h4>Förberedelse inför förlossning</h4>
+              <p>
+                - Vi går igenom avslappningsövningar, akupressurövningar och ev. 
+                övningar med sjal praktiskt vid behov. 
+              </p>
+            </div>
+            <div>
+              <h4>Förlossningsrädsla</h4>
+              <p>
+                - Samtal kring eventuell förlossningsrädsla och känslor kring detta samt hur du/ni kan arbeta för att känna trygghet och lugn.
+              </p>
+            </div>
+            <div>
+              <p>Postpartum och stöd</p>
               <p>
                 - Vad behöver Du/Ni just nu? Hur kan detta införlivas? Stöd att känna in behov efter förlossningen. 
               </p>
