--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,7 @@
         <h1 class="header-name">Doula By Leontine</h1>
       </header>
       <section class="services">
-          <h1>Mina Utbildningar</h1>
+          <h1>Kontakt</h1>
       </section>
       
       <my-footer></my-footer>
