--- a/index.html
+++ b/index.html
@@ -41,20 +41,23 @@
       </div>
     </section>
 
-    <section class="doula-about flex">
-      <div class="doula-about-container">
-        <h1>Vad gör en Doula?</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quod, 
-          voluptates debitis ut adipisci libero atque voluptatibus veniam vero sed, 
-          eveniet tenetur voluptatum itaque alias officiis voluptas? Deserunt, eaque. 
-          Maiores accusamus quasi perferendis laudantium aliquid fugit iste doloribus 
-          totam saepe, porro repellendus impedit cupiditate quos voluptatibus 
-          architecto quis ea nostrum!
-        </p>
-        <br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, ea.</p>
+    <section class="doula-about">
+      <div class="doula-about-container flex">
+        <div>
+          <h1>Vad gör en Doula?</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quod, 
+            voluptates debitis ut adipisci libero atque voluptatibus veniam vero sed, 
+            eveniet tenetur voluptatum itaque alias officiis voluptas? Deserunt, eaque. 
+            Maiores accusamus quasi perferendis laudantium aliquid fugit iste doloribus 
+            totam saepe, porro repellendus impedit cupiditate quos voluptatibus 
+            architecto quis ea nostrum!
+          </p>
+          <br>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, ea.</p>
+        </div>
+        <img class="doula-about-img" src="./images/helpinghands.png" alt="">
       </div>
-      <img class="doula-about-img" src="./images/helpinghands.png" alt="">
+
     </section>
   <section class="included">
     <h1>Doula paketet</h1>
